Pre-publish sync: Fix paths for sub-pages

--- a/contact.html
+++ b/contact.html
@@ -418,7 +418,7 @@
 <i class="fas fa-phone"></i>
 <div class="info-content">
 <h3>טלפון</h3>
-<p><a href="tel:[business_phone]">[business_phone]</a></p>
+<p><a href="tel:050-7409534">050-7409534</a></p>
 <p class="info-note">זמינים בימים א׳-ה׳, 9:00-18:00</p>
 </div>
 </div>
@@ -426,7 +426,7 @@
 <i class="fas fa-envelope"></i>
 <div class="info-content">
 <h3>דואר אלקטרוני</h3>
-<p><a href="mailto:[business_email]">[business_email]</a></p>
+<p><a href="mailto:ns@nsadv.co.il">ns@nsadv.co.il</a></p>
 <p class="info-note">נשיב תוך 24 שעות</p>
 </div>
 </div>
@@ -434,7 +434,7 @@
 <i class="fas fa-map-marker-alt"></i>
 <div class="info-content">
 <h3>כתובת המשרד</h3>
-<p>[business_address]</p>
+<p>קומה 16 M-TOWER בניין, באר שבע, רחה פריאר 9, ישראל</p>
 <p class="info-note">פגישות לפי תיאום מראש</p>
 </div>
 </div>
@@ -442,9 +442,13 @@
 <i class="fas fa-clock"></i>
 <div class="info-content">
 <h3>שעות פעילות</h3>
-<p>ראשון - חמישי: 9:00 - 18:00</p>
-<p>שישי: 9:00 - 13:00</p>
-<p>שבת: סגור</p>
+<p>יום ראשון: 09:00 - 18:00</p>
+<p>יום שני: 09:00 - 18:00</p>
+<p>יום שלישי: 09:00 - 18:00</p>
+<p>יום רביעי: 09:00 - 18:00</p>
+<p>יום חמישי: 09:00 - 18:00</p>
+<p>יום שישי: סגור</p>
+<p>יום שבת: סגור</p>
 </div>
 </div>
 </div>
@@ -452,7 +456,7 @@
 <i class="fas fa-exclamation-triangle"></i>
 <h3>מקרה דחוף?</h3>
 <p>במקרים דחופים, צרו איתנו קשר טלפוני ישירות או שלחו הודעה בווטסאפ.</p>
-<a href="https://wa.me/[whatsapp_handle]" class="btn-whatsapp" target="_blank" rel="noopener noreferrer">
+<a href="#" class="btn-whatsapp" target="_blank" rel="noopener noreferrer" style="display:none;" style="display:none;">
 <i class="fab fa-whatsapp"></i> שלחו הודעה בווטסאפ
 </a>
 </div>
@@ -497,13 +501,13 @@
 <h2>מוכנים לקבל ייעוץ משפטי מקצועי?</h2>
 <p>אל תחכו - צרו איתנו קשר עכשיו וקבעו פגישת ייעוץ ראשונית חינם. אנחנו כאן כדי לעזור לכם!</p>
 <div class="cta-buttons">
-<a href="tel:[business_phone]" class="btn-primary btn-large"><i class="fas fa-phone"></i> התקשרו עכשיו</a>
-<a href="mailto:[business_email]" class="btn-secondary btn-large"><i class="fas fa-envelope"></i> שלחו אימייל</a>
+<a href="tel:050-7409534" class="btn-primary btn-large"><i class="fas fa-phone"></i> התקשרו עכשיו</a>
+<a href="mailto:ns@nsadv.co.il" class="btn-secondary btn-large"><i class="fas fa-envelope"></i> שלחו אימייל</a>
 </div>
 </div>
 </div>
 </section>
-<a href="https://wa.me/[whatsapp_handle]" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+<a href="#" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer" style="display:none;" style="display:none;">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -514,10 +518,10 @@
           <div class="all-rights-reserved">
             <p>© 2025 משרד עורכי דין נדב שלוש. כל הזכויות שמורות.</p>
           </div>
-          <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-<a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/[whatsapp_handle]" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-<a href="https://linkedin.com/company/[linkedin_handle]" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a></div>
+          <div class="footer-social"><a href="#" target="_blank" rel="noopener noreferrer" aria-label="Facebook" style="display:none;" style="display:none;"><i class="fab fa-facebook"></i></a>
+<a href="#" target="_blank" rel="noopener noreferrer" aria-label="Instagram" style="display:none;" style="display:none;"><i class="fab fa-instagram"></i></a>
+<a href="#" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" style="display:none;" style="display:none;"><i class="fab fa-whatsapp"></i></a>
+<a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" style="display:none;" style="display:none;"><i class="fab fa-linkedin"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
