--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   opacity: 0.7;
 }</style>
     <!-- Cookie Consent -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css">
     <script src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.umd.js"></script>
     <!-- Mickidum Accessibility Toolbar -->
     <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script>
@@ -339,20 +339,20 @@
 <div class="container nav-container">
 <div class="nav-brand">
 <a href="/" class="logo-link">
-<img src="/assets/logo.webp" alt="משרד עורכי דין נדב שלוש" class="logo" />
+<img src="/assets/logo.webp" alt="משרד עורכי דין נדב שלוש" class="logo">
 </a>
 </div>
 <button class="mobile-toggle" id="mobileToggle" aria-label="תפריט">
 <svg class="hamburger-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
-<path d="M3 12h18M3 6h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+<path d="M3 12h18M3 6h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
 </svg>
 <svg class="close-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" style="display: none;">
-<path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+<path d="M18 6L6 18M6 6l12 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
 </svg>
 </button>
 <button class="phone-header-btn" aria-label="התקשרו אלינו">
 <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-<path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+<path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
 </svg>
 </button>
 <ul class="nav-menu" id="navMenu">
@@ -366,7 +366,7 @@
 </nav>
 <section class="hero">
 <div class="hero-overlay"></div>
-<img data-placeholder="hero-1" data-context="Modern Israeli law office with professional attorney consulting with diverse business clients in elegant conference room" src="/assets/hero-hero-1.webp" alt="משרד עורכי דין נדב שלוש - ייעוץ משפטי מקצועי" class="hero-img">
+<img data-placeholder="hero-1" data-context="Modern Israeli law office with professional attorney consulting with diverse business clients in elegant conference room" src="https://api.zappy5.com/api/website/preview/b0487454-a06c-4aaa-bafc-391afe3478a6/assets/hero-hero-1-1767185986619-vsfkx8.webp?v=1767185986748" alt="משרד עורכי דין נדב שלוש - ייעוץ משפטי מקצועי" class="hero-img zappy-editable-image" style="object-position: 50% 50%;" data-element-id="img-1767185386127-310fddwmz" width="1843" height="600">
 <div class="container hero-content">
 <h1>ייעוץ משפטי מקצועי שמביא תוצאות</h1>
 <h3>משרד עורכי דין נדב שלוש מתמחה בייעוץ משפטי לעסקים קטנים ובינוניים, דיני משפחה וממון, נדל״ן ודיני עבודה. אנחנו כאן כדי להגן על הזכויות שלכם ולהבטיח את האינטרסים שלכם בכל שלב.</h3>
@@ -428,7 +428,7 @@
 <a href="/about" class="btn-primary">למדו עוד עלינו</a>
 </div>
 <div class="split-image">
-<img data-placeholder="service-5" data-context="Professional Israeli attorney Nadav Shalosh in modern law office reviewing case files" src="/assets/service-service-5.webp" alt="עורך דין נדב שלוש - מקצועיות וניסיון" class="feature-img">
+<div class="zappy-inserted-element" style="text-align: center; display: flex; justify-content: center;"><img id="element-saved-1767185898209-qqmeoii3n7" src="/assets/service-service-5-1767185880302-e00u63.webp" alt="Image" style="width: auto; height: auto; border-radius: 8px; max-width: 100%; object-fit: cover; object-position: 50% 50%;" data-element-type="image" width="676"></div>
 </div>
 </div>
 </div>
@@ -501,11 +501,11 @@
 <h2>זקוקים לייעוץ משפטי מקצועי?</h2>
 <p>אל תחכו - קבעו עכשיו פגישת ייעוץ חינם עם עורך דין נדב שלוש ותנו לנו לעזור לכם להגן על הזכויות שלכם. אנחנו כאן בשבילכם.</p>
 <a href="/contact" class="btn-primary btn-large">קבעו פגישת ייעוץ חינם</a>
-<p class="cta-subtext">או התקשרו אלינו ישירות: <a href="tel:[business_phone]" class="phone-link">[business_phone]</a></p>
+<p class="cta-subtext">או התקשרו אלינו ישירות: <a href="tel:050-7409534" class="phone-link">050-7409534</a></p>
 </div>
 </div>
 </section>
-<a href="https://wa.me/[whatsapp_handle]" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer">
+<a href="#" target="_blank" class="whatsapp-float" aria-label="WhatsApp" rel="noopener noreferrer" style="display:none;" style="display:none;">
 <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -516,10 +516,10 @@
           <div class="all-rights-reserved">
             <p>© 2025 משרד עורכי דין נדב שלוש. כל הזכויות שמורות.</p>
           </div>
-          <div class="footer-social"><a href="https://facebook.com/[facebook_handle]" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-<a href="https://instagram.com/[instagram_handle]" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-<a href="https://wa.me/[whatsapp_handle]" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-<a href="https://linkedin.com/company/[linkedin_handle]" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a></div>
+          <div class="footer-social"><a href="#" target="_blank" rel="noopener noreferrer" aria-label="Facebook" style="display:none;" style="display:none;"><i class="fab fa-facebook"></i></a>
+<a href="#" target="_blank" rel="noopener noreferrer" aria-label="Instagram" style="display:none;" style="display:none;"><i class="fab fa-instagram"></i></a>
+<a href="#" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" style="display:none;" style="display:none;"><i class="fab fa-whatsapp"></i></a>
+<a href="#" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" style="display:none;" style="display:none;"><i class="fab fa-linkedin"></i></a></div>
           <div class="footer-legal">
             <a href="/privacy" aria-label="מדיניות פרטיות">
               מדיניות פרטיות
